# MatchingEngine

./: .gitignore  ASSIGNMENT.md  CMakeLists.txt  README.md  WRITEUP.md  vcpkg.json
.cursor/rules/: matching-engine-performance.mdc
cmake/: MeDeterministic.cmake
include/: benchmark_runner.hpp  cli_display.hpp  io_adapter.hpp  market_event.hpp  market_router.hpp  market_shard.hpp  matching_engine.hpp  memory_pool.hpp  order_book.hpp  types.hpp
src/: benchmark.cpp  cli_display.cpp  io_adapter.cpp  main.cpp  market_router.cpp  market_shard.cpp  matching_engine.cpp  order_book.cpp
tests/: basic.txt  cancel_during_match.txt  cancel_edge.txt  depth_10.txt  depth_20.txt  depth_50.txt  determinism_stress.sha256  determinism_stress.txt  gen_depth_tests.sh  ioc.txt  market.txt  multi_market.txt  partial_fill.txt  post_only.txt  price_time.txt  run_tests.sh  test_determinism.sh  verify_tests.sh
